fix: further fixes to bio textarea overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -818,7 +818,7 @@ svg {
 
   .biodiv textarea {
     min-width: 250px;
-    min-height: 15dvh;
+    min-height: 20dvh;
   }
 }
 
@@ -1045,5 +1045,10 @@ svg {
 
   .biotext {
     width: 80vw;
+  }
+
+  .biodiv textarea {
+    min-width: 250px;
+    min-height: 15dvh;
   }
 }
